--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zap Shift - Home</title>
-    <!-- google font -->
-    <link rel="stylesheet" href="src/font.css">
   </head>
-  <body class="urbanist-regular">
+  <body class="bg-background-color">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
